--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serenity = { version = "0.12", features = [
+    "voice",
+] }
+songbird = { version = "0.4" }
+tokio = { version = "1.21.2", features = [
+    "macros",
+    "rt-multi-thread",
+] }
