--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serenity = { version = "0.12", features = [
-    "voice",
+serenity = { version = "0.12", default-features = false, features = [
+    "client",
+    "gateway",
+    "rustls_backend",
+    "model",
 ] }
 songbird = { version = "0.4" }
-tokio = { version = "1.21.2", features = [
+tokio = { version = "1.35", features = [
     "macros",
     "rt-multi-thread",
 ] }
