--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,5 +18,18 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
-    - name: Run tests
+    # - name: Run tests
+    #   run: cargo test --verbose
+  
+  test:
+    runs-on: ubuntu-latest
+
+    needs: build
+    
+    steps:
+    - name: Test Lexer
+      run: cargo test lexer --verbose
+    - name: Test Parser
+      run: cargo test parser --verbose
+    - name: Test All
       run: cargo test --verbose
