--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,6 +27,7 @@ jobs:
     needs: build
     
     steps:
+    - uses: actions/checkout@v3
     - name: Test Lexer
       run: cargo test lexer --verbose
     - name: Test Parser
