--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
 
     needs: build
-    if: '!cancelled()'
+    if: success() || failure()
     
     steps:
     - uses: actions/checkout@v3
