--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serenity = { version = "0.12.2", features = [
-    "voice",
-] }
-songbird = { version = "0.4.3" }
-tokio = { version = "1.40.0", features = [
-    "macros",
-    "rt-multi-thread",
-] }
-poise = { version = "0.6.1" }
+serenity = { version = "0.12.2", features = ["voice"] }
+songbird = "0.4.3"
+tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
+poise = "0.6.1"
+toml = "0.8.19"
+serde = "1.0.213"
