--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,4 @@
-[package]
-name = "flare-discord-bot"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+resolver = "3"
+members = ["bot", "framework", "macros"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-serenity = { version = "0.12.2", features = ["voice"] }
-songbird = "0.4.3"
-tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
-poise = "0.6.1"
-toml = "0.8.19"
-serde = "1.0.213"
