setup basic bot that does nothing

--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -4,4 +4,22 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-macros = { path = "../macros"}
+dotenvy = "0.15.7"
+macros = { path = "../macros" }
+tokio = {version = "1.47.1", features = ["macros", "rt-multi-thread"]}
+
+[dependencies.serenity]
+version = "0.12"
+default-features = false
+features = [
+    "builder",
+    "cache",
+    "chrono",
+    "client",
+    "framework",
+    "gateway",
+    "http",
+    "model",
+    "utils",
+    "rustls_backend",
+]
