--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -10,5 +10,6 @@ tokio = {version = "1.47", features = ["macros", "rt-multi-thread"]}
 version = "0.12"
 default-features = false
 features = [
+    "client",
     "framework",
 ]
