--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2024"
 
 [dependencies]
 dotenvy = "0.15.7"
-framework = { path = "../framework" }
-macros = { path = "../macros" }
+framework = { path = "../framework", features = ["macros"] }
 tokio = {version = "1.47", features = ["macros", "rt-multi-thread"]}
 
 [dependencies.serenity]
