--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 dotenvy = "0.15.7"
 framework = { path = "../framework", features = ["macros"] }
-tokio = {version = "1.47", features = ["macros", "rt-multi-thread"]}
+tokio = {version = "1.47", features = ["macros", "rt-multi-thread", "process"]}
 
 [dependencies.serenity]
 version = "0.12"
